1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.[hm] ([FArguments -addArgument:ofObjCType:], 
	[FArguments -setObjCReturnType:], [FArguments -getReturnVal:]):
	New methods.
	([FArguments -_setReturnType_:]): Renamed from setReturnType:.
	([FArguments -_addArgument_:ofType:]): Renamed from

	* FArguments.h: Include objc/objc.h.
	(swarm_type_object): Renamed from swarm_type_pointer.

	* FCall.m (defobj_init_java_call_tables): Accomodate.

	* FCall.h, FArguments.h: Move JOBJECT to FCall.h.

	* FArguments.[hm] ([FArguments -addUnsignedChar:], 
	[FArguments -addUnsignedShort:], [FArguments -addUnsigned:],
	[FArguments -addUnsignedLong:]): New methods.

	* FArguments.m (ADD_COMMON): Add type and value assignment to macro.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m (fillHiddenArguments): Make static.

	* FCall.[hm], FArguments.m: Avoid libffi things.

1999-03-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Archiver.m (defaultPath): Append slash only if $HOME is empty
	or the last character is not already a slash.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h, FCall.[hm]: Rename init_javacall_tables to
	defobj_init_java_call_tables and declare in defobj.h.

	* defobj.m (_defobj_implement): Call setTypeImplemented: for FCall.

	* FCall.h: Include swarmconfig.h, but first undefine PACKAGE 
	and VERSION after inclusion of ffi.h.
	(FCall_c): Make ffunction be of type func_t.  

	* defobj.h, FCall.[hm]: Use setFunctionPointer: with func_t 
	argument instead of setFunction: with (void (*)()) argument.

1999-03-17  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m (FCall_c): Rename FCall to FCall_c to avoid name clash
	with new protocol.
	([FCall_c -performCall]): Rename _performAction_: to performCall.

	* FCall.h (FCall_c): Likewise. 

	* defobj.h: Add new protocol FCall.

1999-03-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.h: Include ffi.h.
