@@ -131,87 +131,6 @@ get_swarm_type_for_objc_type (char objcType)
   abort ();
 }
 
-- (retval_t)getReturnVal: (void *)res
-{
-  unsigned char return_uchar (void) { return *(unsigned char *) res; }
-  unsigned short return_ushort (void) { return *(unsigned short *) res; }
-  unsigned return_unsigned (void) { return *(unsigned *) res; }
-  unsigned long return_ulong (void) { return *(unsigned long *) res; }
-  const char *return_string (void) { return *(const char **) res; }
-  float return_float (void) { return *(float *) res; }
-  double return_double (void) { return *(double *) res; }
-  id return_object (void) { return *(id *) res; }
-  void return_void (void) { return; }
-
-  retval_t apply_uchar (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_uchar, args, sizeof (void *));
-    }
-  retval_t apply_ushort (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_ushort, args, sizeof (void *));
-    }
-  retval_t apply_unsigned (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_unsigned, args, sizeof (void *));
-    }
-  retval_t apply_float (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_float, args, sizeof (void *));
-    }
-  retval_t apply_double (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_double, args, sizeof (void *));
-    }
-  retval_t apply_object (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_object, args, sizeof (void *));
-    }
-  retval_t apply_void (void)
-    {
-      void* args = __builtin_apply_args ();
-      return __builtin_apply ((apply_t) return_void, args, sizeof (void *));
-    }
-
-#if 0
-  switch (returnType)
-    {
-    case swarm_type_void:
-      return apply_void ();
-    case swarm_type_uchar: 
-    case swarm_type_char:
-      return apply_uchar ();
-    case swarm_type_ushort:
-    swarm_type_short: 
-      return apply_ushort ();
-    case swarm_type_uint:
-    case swarm_type_int:
-      return apply_unsigned ();
-    case swarm_type_ulong: 
-    case swarm_type_long:
-      return apply_ulong ();
-    case swarm_type_float: 
-      return apply_float ();
-    case swarm_type_double:
-      return apply_double ();
-    case swarm_type_string:
-      return apply_string ();
-    case swarm_type_object:
-      return apply_object ();
-    default:
-      abort ();
-    }
-#else
-  return NULL;
-#endif
-}
-
 - addArgument: (void *)value ofObjCType: (char)objcType
 {
   return [self _addArgument_: value ofType: get_swarm_type_for_objc_type (objcType)];
